[tool.poetry]
name = "graphrag"
version = "0.1.0"
description = ""
authors = ["Lakshmi Shree A <lakshmishreea122003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"

[tool.poetry.group.dev.dependencies]
pymongo = "^4.10.1"
urllib5 = "^66.0.3"
streamlit = "^1.40.1"
langchain-openai = "^0.2.8"
langchain-experimental = "^0.3.3"
llama-index = "^0.11.23"
os3 = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
